--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>Sorting Algo Visualizer</title>
 
     <link rel="stylesheet" href="./css/style.css" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-wEmeIV1mKuiNpC+IOBjI7aAzPcEZeedi5yW5f2yOq55WWLwNGmvvx4Um1vskeMj0" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  
   </head>
   <body>
     <header>
@@ -65,4 +68,33 @@
     <script src="./scripts/heap.js"></script>
 
   </body>
+
+ <footer class="site-footer">
+  <div class="container">
+    <div class="row">
+      <div class="col-sm-12 col-md-6">
+        <h6>About</h6>
+        <p class="text-justify">This is a Web Visualization tool for sorting algorithms. The human brain can easily process visuals instead of long codes to understand the algorithms.</p>
+      </div>    
+    <hr>
+  </div>
+  <div class="container">
+    <div class="row">
+      <div class="col-md-8 col-sm-6 col-xs-12">
+        <p class="copyright-text">Mayank Mamgain</p>
+          <a href="https://www.geu.ac.in">Graphic Era University</a>
+        </p>
+      </div>
+
+      <div class="col-md-4 col-sm-6 col-xs-12">
+        <ul class="social-icons">
+          <li><a class="github" href="https://github.com/Mayank17M"><i class="fa fa-github"></i></a></li>
+          <li><a class="twitter" href="https://twitter.com/MayankMamgain10"><i class="fa fa-twitter"></i></a></li>
+          <li><a class="linkedin" href="https://www.linkedin.com/in/mayank-mamgain-652a091ba/"><i class="fa fa-linkedin"></i></a></li>   
+        </ul>
+      </div>
+    </div>
+  </div>
+</footer>
+
 </html>
